--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "boxicons": "^2.1.4",
+    "gsap": "^3.12.5",
+    "install": "^0.13.0",
     "json": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
